--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-standard": "^4.0.1",
     "nodemon": "^2.0.2"
+  },
+  "nodemonConfig": {
+    "ignore": ["dist-electron/*"]
   }
 }
