--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "lemon-utils": "^0.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
+    "request": "^2.88.2",
     "typescript": "~3.7.2"
   },
   "main": "dist-electron/index.js",
@@ -22,7 +24,7 @@
     "electron-build": "tsc --outDir dist-electron electron/index.ts",
     "electron-ts-watch": "tsc --watch --outDir dist-electron electron/index.ts",
     "electron-start": "electron .",
-    "electron-dev-watch": "nodemon --exec 'electron .'",
+    "electron-dev-watch": "nodemon --watch ./dist-electron/*.js --exec 'electron .'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/request": "^2.48.4",
     "electron": "^8.0.1",
     "eslint-config-standard": "^14.1.0",
     "eslint-config-standard-react": "^9.2.0",
@@ -51,7 +54,5 @@
     "eslint-plugin-standard": "^4.0.1",
     "nodemon": "^2.0.2"
   },
-  "nodemonConfig": {
-    "ignore": ["dist-electron/*"]
-  }
+  "workspaces": ["./utils"]
 }
