--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
     "request": "^2.88.2",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "wallpaper": "^4.4.1"
   },
   "main": "dist-electron/index.js",
   "scripts": {
