--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "cheerio": "^1.0.0-rc.3",
     "lemon-utils": "^0.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
