--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.17",
     "@types/request": "^2.48.4",
     "electron": "^8.0.1",
     "eslint-config-standard": "^14.1.0",
