--- a/package.json
+++ b/package.json
@@ -2,26 +2,6 @@
   "name": "lemon-wallpaper",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.9.5",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "cheerio": "^1.0.0-rc.3",
-    "lemon-utils": "^0.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0",
-    "request": "^2.88.2",
-    "typescript": "~3.7.2",
-    "wallpaper": "^4.4.1"
-  },
   "main": "dist-electron/index.js",
   "homepage": "./",
   "scripts": {
@@ -46,8 +26,26 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.45",
+    "cheerio": "^1.0.0-rc.3",
+    "lemon-utils": "^0.0.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "request": "^2.88.2",
+    "wallpaper": "^4.4.1"
+  },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "@types/cheerio": "^0.22.17",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "@types/request": "^2.48.4",
     "electron": "^8.0.1",
     "eslint-config-standard": "^14.1.0",
@@ -57,7 +55,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-standard": "^4.0.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "react-scripts": "3.4.0",
+    "typescript": "~3.7.2"
   },
   "workspaces": [
     "./utils"
