--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/request": "^2.48.4",
     "electron": "^8.0.1",
+    "electron-builder": "^22.6.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-config-standard-react": "^9.2.0",
     "eslint-plugin-import": "^2.20.1",
