--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@material-ui/lab": "^4.0.0-alpha.45",
     "cheerio": "^1.0.0-rc.3",
     "electron-happy-ipc": "^1.0.0-beta",
+    "electron-log": "^4.2.2",
     "electron-updater": "^4.3.1",
     "lemon-utils": "^0.0.1",
     "react": "^16.12.0",
